syntax = "proto3";
  
package grpc.books.v1;
  
import "proto/books/books.messages.proto";
  
message ListBooksRequest {
}
  
message ListBooksResponse {
  repeated Book books = 1;
}
  
message GetBookRequest {
  string id = 1;
}
  
message GetBookResponse {
  Book book = 1;
}
  
message GetBooksRequest {
  repeated string ids = 1;
}
  
message GetBooksResponse {
  repeated Book books = 1;
}
  
message AddBookRequest {
  Book book = 1;
}
  
message AddBookResponse {
  Book book = 1;
}
  
message DeleteBookRequest {
  string id = 1;
}
  
message DeleteBookResponse {
} 

// API for managing books
service BooksAPI {
  // Get all books
  rpc ListBooks(ListBooksRequest) returns (ListBooksResponse);
  // Get book by ID
  rpc GetBook(GetBookRequest) returns (GetBookResponse);
  // Get book by IDs
  rpc GetBooks(GetBooksRequest) returns (GetBooksResponse);
  // Add new book
  rpc AddBook(AddBookRequest) returns (AddBookResponse);
  // Delete book
  rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse);
}